Import patches-unapplied version 1.3.0+dfsg-5expubuntu1 to ubuntu/raring-proposed
Imported using git-ubuntu import.

Changelog parent: 863a9521b95a5fe60e824c69ed67961bdd1a2c3a

New changelog entries:
  [ Serge Hallyn ]
  * Merge 1.3.0+dfsg-5exp from Debian.
  * remaining changes from 1.3.0+dfsg-1~exp3ubuntu1:
    - debian/control:
      * update maintainer
      * remove vde2 recommends
      * build-deps: remove libusbredir, libvdeplug2-dev,
        libspice-server-dev, libspice-protocol-dev, libiscsi-dev
      * qemu-system:
        - break/replace qemu-common
        - depend on udev
        - remove openbios-ppc, openbios-sparc, and openhackware from
          Depends.  (Intend to add them back once we can build them.)
      * qemu-utils: break/replace qemu-kvm
    - qemu-kvm.upstart:
      - add qemu-system.qemu-kvm.upstart
      - debian/rules: add dh_installinit to get qemu-system.upstart installed.
      - take the defaults from the old qemu-kvm.defaults, and move them into
        the upstart job
    - debian/patches:
      - apply gridcentric patches from lp:~amscanne/+junk/gridcentric-qemu-patches
      - apply arm patches from git://git.linaro.org/qemu/qemu-linaro.git
    - add links for qemu-ifup/down in qemu-system-common.links
    - debian/qemu-system-common.postinst
      - udevadm trigger to fix up /dev/kvm perms
    - debian/qemu-system.links:
      - remove pxe-virtio, pxe-e1000 and pxe-rtl8139 links (which conflict
        with ones from kvm-ipxe).  We may want to move the links from kvm-ipxe
        back to qemu-system at some point.
  * remaining changes from after 1.3.0+dfsg-1~exp3ubuntu1:
    - qemu-system-common.links: add link for OVMF
    - Add qemu-utils.links for kvm-img and kvm-nbd utils and manpages.
    - qemu-system.links:
      * Add link to usr/share/ovmf/OVMF.fd
      * Fix target of /etc/kvm/kvm-if{up,down} links
    - debian/control: qemu-system should Recommend cpu-checker
    - Add qemu-kvm breaks/replaces to qemu-user, to han

--- a/debian/rules
+++ b/debian/rules
@@ -31,6 +31,7 @@ common_configure_opts = \
 	--with-system-pixman \
 	--interp-prefix=/etc/qemu-binfmt/%M \
 	--localstatedir=/var \
+	--enable-uname-release=2.6.32 \
 
 # list of system (softmmu) targets, from ./configure
 system_targets = \
@@ -191,7 +192,7 @@ endif
 # virtfs-proxy-helper is linux-specific
 	for f in usr/bin/virtfs-proxy-helper \
 	         usr/share/man/man1/virtfs-proxy-helper.1 ; do \
-	  mkdir -p debian/qemu-system-common/$${f%.*} ; \
+	  mkdir -p debian/qemu-system-common/$${f%/*} ; \
 	  mv debian/tmp/$$f debian/qemu-system-common/$$f ; \
 	done
 
@@ -230,6 +231,7 @@ endif
 
 	dh_install --list-missing
 	dh_installdocs
+	dh_installinit -pqemu-system-x86 --no-restart-on-upgrade --error-handler=true --name=qemu-kvm
 	dh_installchangelogs Changelog
 	dh_installudev
 	dh_link
